--- a/metadata.yaml
+++ b/metadata.yaml
@@ -24,5 +24,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Chinese fiction -- Ming dynasty, 1368-1644'
 - !lcc 'PL'
+- GITenberg
 title: 石點頭
 url: http://www.gutenberg.org/ebooks/25399
